fix: add z-index to dropdown drop

--- a/client/src/components/dropdown/dropdown.scss
+++ b/client/src/components/dropdown/dropdown.scss
@@ -2,5 +2,6 @@
   position: relative;
   .dropdownDrop{
     position: absolute;
+    z-index: 9;
   }
 }
